Removed excess double brace initialization from tests
I was terribly misguided when I first wrote the tests. The new initialization of objects should reduce the byte code and increase testing/building speeds